--- a/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
@@ -21,63 +21,52 @@
             </ul>
         </header>
         <section class="home-img-area">
-            <img src="../../img/images/bg/banner01_1920_1300.jpg" alt="" class="home-main-image">
+            <img src="http://res.cloudinary.com/freevel/image/upload/v1503767936/banner01_1920_1300_cua2vu.jpg" alt="" class="home-main-image">
         </section>
         <section class="home-section section-one">
             <div class="home-section-body">
-                <p class="home-brief-title">sous titre</p>
+                <!--<p class="home-brief-title">sous titre</p>-->
                 <p class="home-brief-text">
                     <!--我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容-->
                 </p>
                 <p class="home-brief-text">
                     La Chine s'affiche comme une destination hors du commun, avec un patrimoine culturel et naturel incomparablement riche et varié. Nous explorons cette Chine hétéroclite au centre de la Chine, et découvrons les multiples facettes de cette destination tradition. De Wuhan à Zhangjiajie, en passant par Fenghuang, ce voyage est une découverte complète de tous les mystères de la Chine.
                 </p>
+                <img src="../../img/images/others/prix_title.jpg">
             </div>
         </section>
+
         <section class="home-section section-two">
             <div class="home-section-body">
-                <!--<p class="home-brief-title">Zhangjiajie豪华10天8晚游</p>-->
-                <!--<p class="home-brief-title-second">价格：<label>€2699</label></p>-->\
-                <img src="../../img/images/others/prix_title.jpg">
                 <div class="home-brief-body">
-                    <div class="home-brief-item">
-                        <img src="../../img/images/home/1_08_194_194.png" >
-                        <span>Hôtel de luxe</span>
-                    </div>
-                    <div class="home-brief-item">
-                        <img src="../../img/images/home/1_07_194_194.png" >
-                        <span>Gourmand chinois</span>
-                    </div>
-                    <div class="home-brief-item">
-                        <img src="../../img/images/home/1_06_194_194.png" >
-                        <span>Guides francophones privés</span>
-                    </div>
-                    <!--<div class="home-brief-item">-->
-                        <!--<img src="../../img/images/home/1_05_194_194.png" >-->
-                        <!--<span>全程陪同</span>-->
-                    <!--</div>-->
-                    <div class="home-brief-item">
-                        <img src="../../img/images/home/1_04_194_194.png" >
-                        <span>Petits groups</span>
+                    <div class="home-brief-item1">
+                        <img src="../../img/images/bg/indexBanner2.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>
         </section>
         <section class="home-section section-three">
-            <div class="home-brief-body">
-                <a href="more.html">我想要了解更多 ▶</a>
+            <div class="home-section-body">
+                <div class="home-brief-item">
+                    <img src="../../img/images/bg/FREE.jpg" style="width: 100%"/>
+                </div>
             </div>
-            <div class="home-brief-body">
-                <img src="../../img/images/home/1_02_300_300.png" alt="">
+        </section>
+        <section class="home-section section-five">
+            <div class="home-section-body">
+                <div class="home-brief-item">
+                    <img src="../../img/images/bg/indexBanner1.jpg"/>
+                </div>
             </div>
         </section>
         <section class="home-section section-four">
             <div class="home-section-body">
-                <!--<p class="home-brief-title">我是炫酷的标题</p>-->
                 <img src="../../img/images/others/contact_us.jpg">
                 <p class="home-brief-text">
                     Contactez-nous par email via le formulaire ci-dessous, nous vous répondrons sous un délai de 48 heures maximum.
                 </p>
+            </div>
+            <div class="home-section-body">
                 <div class="home-contact-form">
                     <div class="contact-lside">
                         <span class="input input--yoshiko">
