--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -744,11 +744,11 @@
     </div>
     <div class="m-bg-slide">
         <ul>
-            <li class="current" style="background: url('../../img/images/bg/banner02_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
-            <li style="background: url('../../img/images/bg/banner03_1920_1300.jpg') no-repeat;background-size: 100% auto; margin-top: -200px"></li>
-            <li style="background: url('../../img/images/bg/banner04_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
-            <li style="background: url('http://ovavqn2o0.bkt.clouddn.com/banner05_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
-            <li style="background: url('../../img/images/bg/banner06_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
+            <li class="current" style="background: url('http://res.cloudinary.com/freevel/image/upload/v1503767941/banner02_1920_1300_kw4tkf.jpg') no-repeat;background-size: 100% auto;"></li>
+            <li style="background: url('http://res.cloudinary.com/freevel/image/upload/v1503767942/banner03_1920_1300_vtyrdj.jpg') no-repeat;background-size: 100% auto; margin-top: -200px"></li>
+            <li style="background: url('http://res.cloudinary.com/freevel/image/upload/v1503767934/banner04_1920_1300_cvnlqm.jpg') no-repeat;background-size: 100% auto;"></li>
+            <li style="background: url('http://res.cloudinary.com/freevel/image/upload/v1503767936/banner05_1920_1300_hklvlo.jpg') no-repeat;background-size: 100% auto;"></li>
+            <li style="background: url('http://res.cloudinary.com/freevel/image/upload/v1503767935/banner06_1920_1300_c26axe.jpg') no-repeat;background-size: 100% auto;"></li>
         </ul>
     </div>
     <div class="modal-view-point">
