--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -140,7 +140,7 @@
                                     </div>
                                 </div>
                                 <div class="m-pane-section">
-                                    <img src="../../img/images/schedule/xingcheng5.jpg" style="height: ">
+                                    <img src="../../img/images/schedule/xingcheng5.jpg">
                                     <div class="schedule-item-body">
                                         <p style="visibility: hidden">1</p>
                                         <p>Départ pour Wuhan, transfert en bus tout confort climatisé (Environ 2 h) et TGV(3H)</p>
