发送邮件方式修改

--- a/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
@@ -17,7 +17,7 @@
             </ul>
             <ul class="right-title">
                 <li><a href="more.html"><img src="../../img/images/others/MORE.png"></a></li>
-                <li><img src="../../img/images/others/CONTACT.png"></li>
+                <li><a href="contact.html"><img src="../../img/images/others/CONTACT.png"></li>
             </ul>
         </header>
         <section class="home-img-area">
@@ -59,50 +59,50 @@
                 </div>
             </div>
         </section>
-        <section class="home-section section-four">
-            <div class="home-section-body">
-                <img src="../../img/images/others/contact_us.jpg">
-                <p class="home-brief-text">
-                    Contactez-nous par email via le formulaire ci-dessous, nous vous répondrons sous un délai de 48 heures maximum.
-                </p>
-            </div>
-            <div class="home-section-body">
-                <div class="home-contact-form">
-                    <div class="contact-lside">
-                        <span class="input input--yoshiko">
-                            <input class="input__field input__field--yoshiko" id="email" name="email" type="email">
-                            <label class="input__label input__label--yoshiko" for="input-10">
-                                <span class="input__label-content input__label-content--yoshiko" data-content="Votre adresse e-mail">Votre adresse e-mail</span>
-                            </label>
-                        </span>
-                        <span class="input input--yoshiko">
-                            <input class="input__field input__field--yoshiko" id="phone" name="phone" type="email">
-                            <label class="input__label input__label--yoshiko" for="input-10">
-                                <span class="input__label-content input__label-content--yoshiko" data-content="Votre nom et prénom">Votre nom et prénom</span>
-                            </label>
-                        </span>
-                        <span class="input input--yoshiko">
-                            <input class="input__field input__field--yoshiko" id="name" name="name" type="email">
-                            <label class="input__label input__label--yoshiko" for="input-10">
-                                <span class="input__label-content input__label-content--yoshiko" data-content="Votre numéro de contact">Votre numéro de contact</span>
-                            </label>
-                        </span>
-                    </div>
-                    <div class="contact-rside">
+        <!--<section class="home-section section-four">-->
+            <!--<div class="home-section-body">-->
+                <!--<img src="../../img/images/others/contact_us.jpg">-->
+                <!--<p class="home-brief-text">-->
+                    <!--Contactez-nous par email via le formulaire ci-dessous, nous vous répondrons sous un délai de 48 heures maximum.-->
+                <!--</p>-->
+            <!--</div>-->
+            <!--<div class="home-section-body">-->
+                <!--<div class="home-contact-form">-->
+                    <!--<div class="contact-lside">-->
+                        <!--<span class="input input&#45;&#45;yoshiko">-->
+                            <!--<input class="input__field input__field&#45;&#45;yoshiko" id="email" name="email" type="email">-->
+                            <!--<label class="input__label input__label&#45;&#45;yoshiko" for="input-10">-->
+                                <!--<span class="input__label-content input__label-content&#45;&#45;yoshiko" data-content="Votre adresse e-mail">Votre adresse e-mail</span>-->
+                            <!--</label>-->
+                        <!--</span>-->
+                        <!--<span class="input input&#45;&#45;yoshiko">-->
+                            <!--<input class="input__field input__field&#45;&#45;yoshiko" id="phone" name="phone" type="email">-->
+                            <!--<label class="input__label input__label&#45;&#45;yoshiko" for="input-10">-->
+                                <!--<span class="input__label-content input__label-content&#45;&#45;yoshiko" data-content="Votre nom et prénom">Votre nom et prénom</span>-->
+                            <!--</label>-->
+                        <!--</span>-->
+                        <!--<span class="input input&#45;&#45;yoshiko">-->
+                            <!--<input class="input__field input__field&#45;&#45;yoshiko" id="name" name="name" type="email">-->
+                            <!--<label class="input__label input__label&#45;&#45;yoshiko" for="input-10">-->
+                                <!--<span class="input__label-content input__label-content&#45;&#45;yoshiko" data-content="Votre numéro de contact">Votre numéro de contact</span>-->
+                            <!--</label>-->
+                        <!--</span>-->
+                    <!--</div>-->
+                    <!--<div class="contact-rside">-->
+                        <!--&lt;!&ndash;<div class="contact-form-item">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<label for="">你想反馈或查询的信息：</label>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<textarea name="content" id="content"></textarea>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<button type="button" onclick="sendEmail()">发送</button>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
                         <!--<div class="contact-form-item">-->
-                            <!--<label for="">你想反馈或查询的信息：</label>-->
-                            <!--<textarea name="content" id="content"></textarea>-->
+                            <!--<label for="">Votre message</label>-->
+                            <!--<textarea  name="content" id="content"></textarea>-->
                             <!--<button type="button" onclick="sendEmail()">发送</button>-->
                         <!--</div>-->
-                        <div class="contact-form-item">
-                            <label for="">Votre message</label>
-                            <textarea  name="content" id="content"></textarea>
-                            <button type="button" onclick="sendEmail()">发送</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</section>-->
         <section class="home-img-area footer-img">
             <img src="../../img/images/home/1_03_1920_1250.jpg" alt="" class="home-main-image">
         </section>
