--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -13,7 +13,7 @@
             </ul>
             <ul class="right-title">
                 <li><a href="more.html" class="active"><img src="../../img/images/others/MORE.png"></a></li>
-                <li><img src="../../img/images/others/CONTACT.png"></li>
+                <li><a href="contact.html" class="active"><img src="../../img/images/others/CONTACT.png"></li>
             </ul>
         </header>
         <section class="t-body">
