--- a/com.cyt.music.webapp/src/main/webapp/screens/order/orderPay.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/order/orderPay.html
@@ -59,6 +59,18 @@
         </div>
 
         <div>
+            <h4>希望出发时间</h4>
+            <p class="cd-select icon">
+                <select class="budget" id="budget1">
+                    <option value="2017-10-28">2017-10-28</option>
+                    <option value="2017-11-08">2017-11-08</option>
+                    <option value="2017-11-28">2017-11-28</option>
+                    <option value="2017-12-08">2017-12-08</option>
+                </select>
+            </p>
+        </div>
+
+        <div>
             <h4>房间类型</h4>
             <ul class="cd-form-list">
                 <li>
