--- a/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>人间仙境</title>
+    <title>Au pays des merveilles</title>
     <link rel="stylesheet" href="../../css/stylesheets/tao.css">
     <link rel="stylesheet" href="../../css/email/default.css">
     <link rel="stylesheet" href="../../css/email/normalize.css">
@@ -17,7 +17,7 @@
             </ul>
             <ul class="right-title">
                 <li><a href="more.html"><img src="../../img/images/others/MORE.png"></a></li>
-                <li><a href="contact.html"><img src="../../img/images/others/CONTACT.png"></li>
+                <li><a href="contact.html"><img src="../../img/images/others/CONTACT.png"></a></li>
             </ul>
         </header>
         <section class="home-img-area">
@@ -45,17 +45,17 @@
                 </div>
             </div>
         </section>
-        <section class="home-section section-three">
-            <div class="home-section-body">
-                <div class="home-brief-item">
-                    <img src="../../img/images/bg/FREE.jpg" style="width: 100%"/>
-                </div>
-            </div>
-        </section>
+        <!--<section class="home-section section-three">-->
+            <!--<div class="home-section-body">-->
+                <!--<div class="home-brief-item">-->
+                    <!--<img src="../../img/images/bg/FREE.jpg" style="width: 100%"/>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</section>-->
         <section class="home-section section-five">
             <div class="home-section-body">
                 <div class="home-brief-item">
-                    <img src="../../img/images/bg/indexBanner1.jpg"/>
+                    <a href="more.html"><img src="../../img/images/bg/indexBanner1.jpg" style="width: 80%"/></a>
                 </div>
             </div>
         </section>
