--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -13,7 +13,7 @@
             </ul>
             <ul class="right-title">
                 <li><a href="more.html" class="active"><img src="../../img/images/others/MORE.png"></a></li>
-                <li><a href="contact.html" class="active"><img src="../../img/images/others/CONTACT.png"></li>
+                <li><a href="contact.html"><img src="../../img/images/others/CONTACT.png"></li>
             </ul>
         </header>
         <section class="t-body">
@@ -21,7 +21,7 @@
                 <!--<p class="m-brief-title">奇幻之旅，由此开始。</p>-->
                 <img src="../../img/images/others/3.png">
                 <p class="m-brief-content"></p>
-                <a class="m-brief-btn" href="../../screens/order/orderPay.html"><label>2699€</label>C’est parti▶</a>
+                <a class="m-brief-btn" href="../../screens/order/orderPay.html"><img src="../../img/images/others/pay_btn.png"></a>
             </div>
             <div class="m-container">
                 <ul class="m-nav" role="tablist">
