--- a/com.cyt.music.webapp/src/main/webapp/screens/order/orderPay.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/order/orderPay.html
@@ -7,7 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="../../css/form/reset.css"> <!-- CSS reset -->
-    <link rel="stylesheet" href="../../css/form/style.css"> <!-- Resource style -->
+    <link rel="stylesheet" href="../../css/form/style1.css"> <!-- Resource style -->
     <script src="../../js/form/modernizr.js"></script> <!-- Modernizr -->
     <script src="../../js/form/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="../../js/jquery.cookie.js" ></script>
