--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -25,11 +25,16 @@
             </div>
             <div class="m-container">
                 <ul class="m-nav" role="tablist">
-                    <li role="presentation" class="active"><a href="#schedule" role="tab" data-toggle="tab" data-bg="0"><img src="../../img/images/others/plan.png"></a></li>
-                    <li role="presentation"><a href="#viewpoint" role="tab" data-toggle="tab" data-bg="1"><img src="../../img/images/others/site.png"></a></li>
-                    <li role="presentation"><a href="#service" role="tab" data-toggle="tab" data-bg="2"><img src="../../img/images/others/Prix.png"></a></li>
-                    <li role="presentation"><a href="#hotel" role="tab" data-toggle="tab" data-bg="3"><img src="../../img/images/others/hotel.png"></a></li>
-                    <li role="presentation"><a href="#comment" role="tab" data-toggle="tab" data-bg="4"><img src="../../img/images/others/Voyageurs.png"></a></li>
+                    <!--<li role="presentation" class="active"><a href="#schedule" role="tab" data-toggle="tab" data-bg="0"><img src="../../img/images/others/plan.png"></a></li>-->
+                    <!--<li role="presentation"><a href="#viewpoint" role="tab" data-toggle="tab" data-bg="1"><img src="../../img/images/others/site.png"></a></li>-->
+                    <!--<li role="presentation"><a href="#service" role="tab" data-toggle="tab" data-bg="2"><img src="../../img/images/others/Prix.png"></a></li>-->
+                    <!--<li role="presentation"><a href="#hotel" role="tab" data-toggle="tab" data-bg="3"><img src="../../img/images/others/hotel.png"></a></li>-->
+                    <!--<li role="presentation"><a href="#comment" role="tab" data-toggle="tab" data-bg="4"><img src="../../img/images/others/Voyageurs.png"></a></li>-->
+                    <li role="presentation" class="active"><a href="#schedule" role="tab" data-toggle="tab" data-bg="0"><img data-href="#schedule" src="../../img/images/others/plan.png"></a></li>
+                    <li role="presentation"><a href="#viewpoint" role="tab" data-toggle="tab" data-bg="1"><img data-href="#viewpoint" src="../../img/images/others/site.png"></a></li>
+                    <li role="presentation"><a href="#service" role="tab" data-toggle="tab" data-bg="2"><img data-href="#service" src="../../img/images/others/Prix.png"></a></li>
+                    <li role="presentation"><a href="#hotel" role="tab" data-toggle="tab" data-bg="3"><img data-href="#hotel" src="../../img/images/others/hotel.png"></a></li>
+                    <li role="presentation"><a href="#comment" role="tab" data-toggle="tab" data-bg="4"><img data-href="#comment" src="../../img/images/others/Voyageurs.png"></a></li>
                 </ul>
                 <div class="m-body">
                     <div role="tabpanel" class="m-pane active" id="schedule">
@@ -765,5 +770,6 @@
     </div>
     <script src="../../js/javascripts/jquery-3.0.0.min.js"></script>
     <script src="../../js/javascripts/main.js"></script>
+</div>
 </body>
 </html>
