部署问题解决

--- a/com.cyt.music.webapp/src/main/webapp/screens/main/contact.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/contact.html
@@ -71,6 +71,8 @@
                     alert("send advice success");
                 }else if(data.msg == "fail"){
                     alert("send advice fail,please try again");
+                }else{
+                    alert("please try later");
                 }
             }});
     }
