--- a/com.cyt.music.webapp/src/main/webapp/index.html
+++ b/com.cyt.music.webapp/src/main/webapp/index.html
@@ -1,10 +1,165 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>demo</title>
+    <meta charset="UTF-8">
+    <title>Au pays des merveilles</title>
+    <link rel="stylesheet" href="css/stylesheets/tao.css">
+    <link rel="stylesheet" href="css/email/default.css">
+    <link rel="stylesheet" href="css/email/normalize.css">
+    <link rel="stylesheet" href="css/email/set2.css">
+    <link rel="stylesheet" href="css/email/textareafullscreen.css">
 </head>
 <body>
-hello ...
+    <div class="home-page">
+        <header class="t-nav">
+            <ul class="left-title">
+                <li><a href="index.html" class="active"><img src="img/images/others/HOME.png"></a></li>
+            </ul>
+            <ul class="right-title">
+                <li><a href="screens/main/more.html"><img src="img/images/others/MORE.png"></a></li>
+                <li><a href="screens/main/contact.html"><img src="img/images/others/CONTACT.png"></a></li>
+            </ul>
+        </header>
+        <section class="home-img-area">
+            <img src="http://res.cloudinary.com/freevel/image/upload/v1503767936/banner01_1920_1300_cua2vu.jpg" alt="" class="home-main-image">
+        </section>
+        <section class="home-section section-one">
+            <div class="home-section-body">
+                <!--<p class="home-brief-title">sous titre</p>-->
+                <p class="home-brief-text">
+                    <!--我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容-->
+                </p>
+                <p class="home-brief-text">
+                    La Chine s'affiche comme une destination hors du commun, avec un patrimoine culturel et naturel incomparablement riche et varié. Nous explorons cette Chine hétéroclite au centre de la Chine, et découvrons les multiples facettes de cette destination tradition. De Wuhan à Zhangjiajie, en passant par Fenghuang, ce voyage est une découverte complète de tous les mystères de la Chine.
+                </p>
+                <img src="img/images/others/prix_title.jpg">
+            </div>
+        </section>
+
+        <section class="home-section section-two">
+            <div class="home-section-body">
+                <div class="home-brief-body">
+                    <div class="home-brief-item1">
+                        <img src="img/images/bg/indexBanner2.jpg" style="width: 100%">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--<section class="home-section section-three">-->
+            <!--<div class="home-section-body">-->
+                <!--<div class="home-brief-item">-->
+                    <!--<img src="../../img/images/bg/FREE.jpg" style="width: 100%"/>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</section>-->
+        <section class="home-section section-five">
+            <div class="home-section-body">
+                <div class="home-brief-item">
+                    <a href="screens/main/more.html"><img src="img/images/bg/indexBanner1.jpg" style="width: 80%"/></a>
+                </div>
+            </div>
+        </section>
+        <!--<section class="home-section section-four">-->
+            <!--<div class="home-section-body">-->
+                <!--<img src="../../img/images/others/contact_us.jpg">-->
+                <!--<p class="home-brief-text">-->
+                    <!--Contactez-nous par email via le formulaire ci-dessous, nous vous répondrons sous un délai de 48 heures maximum.-->
+                <!--</p>-->
+            <!--</div>-->
+            <!--<div class="home-section-body">-->
+                <!--<div class="home-contact-form">-->
+                    <!--<div class="contact-lside">-->
+                        <!--<span class="input input&#45;&#45;yoshiko">-->
+                            <!--<input class="input__field input__field&#45;&#45;yoshiko" id="email" name="email" type="email">-->
+                            <!--<label class="input__label input__label&#45;&#45;yoshiko" for="input-10">-->
+                                <!--<span class="input__label-content input__label-content&#45;&#45;yoshiko" data-content="Votre adresse e-mail">Votre adresse e-mail</span>-->
+                            <!--</label>-->
+                        <!--</span>-->
+                        <!--<span class="input input&#45;&#45;yoshiko">-->
+                            <!--<input class="input__field input__field&#45;&#45;yoshiko" id="phone" name="phone" type="email">-->
+                            <!--<label class="input__label input__label&#45;&#45;yoshiko" for="input-10">-->
+                                <!--<span class="input__label-content input__label-content&#45;&#45;yoshiko" data-content="Votre nom et prénom">Votre nom et prénom</span>-->
+                            <!--</label>-->
+                        <!--</span>-->
+                        <!--<span class="input input&#45;&#45;yoshiko">-->
+                            <!--<input class="input__field input__field&#45;&#45;yoshiko" id="name" name="name" type="email">-->
+                            <!--<label class="input__label input__label&#45;&#45;yoshiko" for="input-10">-->
+                                <!--<span class="input__label-content input__label-content&#45;&#45;yoshiko" data-content="Votre numéro de contact">Votre numéro de contact</span>-->
+                            <!--</label>-->
+                        <!--</span>-->
+                    <!--</div>-->
+                    <!--<div class="contact-rside">-->
+                        <!--&lt;!&ndash;<div class="contact-form-item">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<label for="">你想反馈或查询的信息：</label>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<textarea name="content" id="content"></textarea>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<button type="button" onclick="sendEmail()">发送</button>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--<div class="contact-form-item">-->
+                            <!--<label for="">Votre message</label>-->
+                            <!--<textarea  name="content" id="content"></textarea>-->
+                            <!--<button type="button" onclick="sendEmail()">发送</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</section>-->
+        <section class="home-img-area footer-img">
+            <img src="img/images/home/1_03_1920_1250.jpg" alt="" class="home-main-image">
+        </section>
+    </div>
+    <script src="js/javascripts/jquery-3.0.0.min.js"></script>
+    <script src="js/javascripts/main.js"></script>
+    <script src="js/email/classie.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/email/jquery.textareafullscreen.js"></script>
+    <script>
+        function sendEmail(){
+            $.ajax({
+                type:'post',
+                url:urlConfig+"email/sendemail.action",
+                contentType:'application/json;charset=utf-8',
+                dataType:"json",
+                data:JSON.stringify({name:$("input[name='name']").val(),phone:$("input[name='phone']").val(),email:$("input[name='email']").val(),content:$("textarea[name='content']").val()}),
+                success:function(data){//返回json结果
+                }});
+        }
+
+        $(document).ready(function() {
+            $('#content').textareafullscreen();
+        });
+
+        (function () {
+            if (!String.prototype.trim) {
+                (function () {
+                    // Make sure we trim BOM and NBSP
+                    var rtrim = /^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g;
+                    String.prototype.trim = function () {
+                        return this.replace(rtrim, '');
+                    };
+                })();
+            }
+
+            [ ].slice.call(document.querySelectorAll('input.input__field')).forEach(function (inputEl) {
+                // in case the input is already filled..
+                if (inputEl.value.trim() !== '') {
+                    classie.add(inputEl.parentNode, 'input--filled');
+                }
+
+                // events:
+                inputEl.addEventListener('focus', onInputFocus);
+                inputEl.addEventListener('blur', onInputBlur);
+            });
+
+            function onInputFocus(ev) {
+                classie.add(ev.target.parentNode, 'input--filled');
+            }
+
+            function onInputBlur(ev) {
+                if (ev.target.value.trim() === '') {
+                    classie.remove(ev.target.parentNode, 'input--filled');
+                }
+            }
+        })();
+    </script>
 </body>
 </html>
