--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -5,6 +5,11 @@
     <title>More</title>
     <link rel="stylesheet" href="../../css/stylesheets/tao.css">
 </head>
+<script type="text/javascript">
+    var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    document.write(unescape("%3Cspan id='cnzz_stat_icon_1264472680'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1264472680' type='text/javascript'%3E%3C/script%3E"));
+    document.getElementById("cnzz_stat_icon_1264472680").style.display = "none";
+</script>
 <body>
     <div class="container">
         <header class="t-nav">
@@ -156,7 +161,7 @@
                                 <!--</span>-->
                                 <!--</div>-->
                             <!--</div>-->
-                            <div><img style="width: 100%;height: 100%" src="../../img/images/schedule/schedule_text.jpg"></div>
+                            <div><img style="width: 100%;height: 100%" src="http://res.cloudinary.com/freevel/image/upload/v1505554531/plan_tsvqlg.jpg"></div>
                         </div>
                     </div>
                     <div role="tabpanel" class="m-pane fade in" id="viewpoint">
@@ -396,7 +401,7 @@
                                     <!--</div>-->
                                 <!--</div>-->
                             <!--</div>-->
-                            <div><img style="width: 100%;height: 100%;padding-top: 2rem;padding-bottom: 2rem" src="../../img/images/service/service_text.jpg"></div>
+                            <div><img style="width: 100%;height: 100%;padding-top: 2rem;padding-bottom: 2rem" src="http://res.cloudinary.com/freevel/image/upload/v1505553075/prix_kul717.jpg"></div>
                             <div id="priceDetails">
                                 <h1 style="font-family: 'Bernard MT Condensed'">Le prix est compris</h1>
                                 <ul id="detailTrue">
@@ -417,7 +422,7 @@
                                     <li><img src="../../img/images/others/cha.jpg"> Les frais de visa chinois.</li>
                                     <li><img src="../../img/images/others/cha.jpg"> Les dépenses d'ordre personnelles et les assurances (nous consulter).</li>
                                     <li><img src="../../img/images/others/cha.jpg"> Les activités non mentionnées dans le programme.</li>
-                                    <li><img src="../../img/images/others/cha.jpg"> Supplément chambre individuelle	400€.</li>
+                                    <li><img src="../../img/images/others/cha.jpg"> Supplément chambre individuelle 400 €.</li>
                                     <li><img src="../../img/images/others/cha.jpg"> Les boissons pendant les repas (forfait boisson réservable par nos soins).</li>
                                     <li><img src="../../img/images/others/cha.jpg"> Les suppléments pour des vols départ autre ville (Paris).</li>
                                 </ul>
@@ -753,17 +758,17 @@
             <li style="background: url('http://res.cloudinary.com/freevel/image/upload/v1503767935/banner06_1920_1300_c26axe.jpg') no-repeat;background-size: 100% auto;"></li>
         </ul>
     </div>
+    <div id="modal-hotel-view">
+        <img class="modal-hotel-image" src="" />
+    </div>
     <div class="modal-view-point">
         <div class="modal-body">
-            <div class="modal-close">x</div>
+            <!--<div class="modal-close">x</div>-->
             <div class="left-side"></div>
             <div class="right-side">
                 <header></header>
                 <section></section>
         </div>
-    </div>
-    <div id="modal-hotel-view">
-        <img class="modal-hotel-image" src="" />
     </div>
     <script src="../../js/javascripts/jquery-3.0.0.min.js"></script>
     <script src="../../js/javascripts/main.js"></script>
