--- a/com.cyt.music.webapp/src/main/webapp/screens/main/contact.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/contact.html
@@ -14,6 +14,11 @@
     <script type="text/javascript" src="../../js/jquery.cookie.js" ></script>
     <title>Contact Form | CodyHouse</title>
 </head>
+<script type="text/javascript">
+    var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    document.write(unescape("%3Cspan id='cnzz_stat_icon_1264472680'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1264472680' type='text/javascript'%3E%3C/script%3E"));
+    document.getElementById("cnzz_stat_icon_1264472680").style.display = "none";
+</script>
 <body style="background-image: url(../../img/images/others/contact_banner.jpg);margin-top: -1.2%">
     <div id="contactLogo">
         <img src="../../img/images/others/logo.png"/>
@@ -23,28 +28,28 @@
             <!--<legend>请填写您的个人信息</legend>-->
 
             <div class="error-message">
-                <p>Please enter your personal info and advices</p>
+                <p>Informations nécessaires</p>
             </div>
 
             <div class="icon">
-                <label class="cd-label" for="cd-name" style="color: #000000;">Name</label>
-                <input class="user" type="text" name="cd-name" id="cd-name" required style="background: #ffffff">
+                <label class="cd-label" for="cd-name" style="color: #000000;">Nom et prénom</label>
+                <input class="user" type="text" name="cd-name" id="cd-name" >
             </div>
 
             <div class="icon">
-                <label class="cd-label" for="cd-phone" style="color: #000000;">Phone</label>
-                <input class="phone" type="text" name="cd-phone" id="cd-phone" required>
+                <label class="cd-label" for="cd-phone" style="color: #000000;">Numéro de portable</label>
+                <input class="phone" type="text" name="cd-phone" id="cd-phone" >
             </div>
 
             <div class="icon">
                 <label class="cd-label" for="cd-email" style="color: #000000;">Email</label>
-                <input class="email error" type="email" name="cd-email" id="cd-email" required style="background: #ffffff">
+                <input class="email error" type="email" name="cd-email" id="cd-email" >
             </div>
 
             <div class="contact-form-item">
-                <label for="" style="font-size: 18px;color: #ffffff">Your advices and Consultation</label>
+                <label for="" style="font-size: 18px;color: #ffffff">Votre message</label>
                 <textarea  name="content" id="content" style="margin-top: 1rem"></textarea>
-                <button type="button" name="sendBtn" class="sendBtn" onclick="sendEmail()">发送</button>
+                <button type="button" name="sendBtn" class="sendBtn" onclick="sendEmail()">Envoyer</button>
             </div>
         </fieldset>
     </form>
@@ -68,9 +73,9 @@
             data:JSON.stringify({name:$("input[name='cd-name']").val(),phone:$("input[name='cd-phone']").val(),email:$("input[name='cd-email']").val(),content:$("textarea[name='content']").val()}),
             success:function(data){//返回json结果
                 if(data.msg == "succ"){
-                    alert("send advice success");
+                    alert("Envoyé");
                 }else if(data.msg == "fail"){
-                    alert("send advice fail,please try again");
+                    alert("Veuillez réessayer plus tard");
                 }else{
                     alert("please try later");
                 }
