--- a/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
@@ -21,7 +21,7 @@
             </ul>
         </header>
         <section class="home-img-area">
-            <img src="http://res.cloudinary.com/freevel/image/upload/v1503767936/banner01_1920_1300_cua2vu.jpg" alt="" class="home-main-image">
+            <img src="http://res.cloudinary.com/freevel/image/upload/v1505553047/banner1--b_lfssie.png" alt="" class="home-main-image">
         </section>
         <section class="home-section section-one">
             <div class="home-section-body">
@@ -30,7 +30,7 @@
                     <!--我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容-->
                 </p>
                 <p class="home-brief-text">
-                    La Chine s'affiche comme une destination hors du commun, avec un patrimoine culturel et naturel incomparablement riche et varié. Nous explorons cette Chine hétéroclite au centre de la Chine, et découvrons les multiples facettes de cette destination tradition. De Wuhan à Zhangjiajie, en passant par Fenghuang, ce voyage est une découverte complète de tous les mystères de la Chine.
+                    La Chine s'affiche comme une destination hors du commun, avec un patrimoine culturel et naturel incomparablement riche et varié. Nous explorons cette Chine hétéroclite au centre de la Chine, et découvrons les multiples facettes de ces destinations traditionnelles . De Wuhan à Zhangjiajie, en passant par Fenghuang, ce voyage est une découverte complète de tous les mystères de la Chine.
                 </p>
                 <img src="../../img/images/others/prix_title.jpg">
             </div>
