--- a/com.cyt.music.webapp/src/main/webapp/screens/order/orderPay.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/order/orderPay.html
@@ -13,6 +13,11 @@
     <script type="text/javascript" src="../../js/jquery.cookie.js" ></script>
     <title>Contact Form | CodyHouse</title>
 </head>
+<script type="text/javascript">
+    var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    document.write(unescape("%3Cspan id='cnzz_stat_icon_1264472680'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1264472680' type='text/javascript'%3E%3C/script%3E"));
+    document.getElementById("cnzz_stat_icon_1264472680").style.display = "none";
+</script>
 <body>
 <!--style="display:none;"-->
 <form class="cd-form floating-labels">
@@ -32,22 +37,26 @@
 
         <div class="icon">
             <label class="cd-label" for="cd-name">Nom et prénom</label>
-            <input class="user" type="text" name="cd-name" id="cd-name" required>
+            <input class="user" type="text" name="cd-name" id="cd-name">
+            <p id="nameFai" style="color: #ff0000;padding-top: 1rem;font-family: Arial;display: none">Merci de renseigner votre nom et prénom</p>
         </div>
 
         <div class="icon">
             <label class="cd-label" for="cd-phone">Numéro de portable</label>
-            <input class="phone" type="text" name="cd-phone" id="cd-phone" required>
+            <input class="phone" type="text" name="cd-phone" id="cd-phone">
+            <p id="phoneFai" style="color: #ff0000;padding-top: 1rem;font-family: Arial;display: none">Merci de renseigner votre numéro de téléphone</p>
         </div>
 
         <div class="icon">
             <label class="cd-label" for="cd-email">Email</label>
-            <input class="email error" type="email" name="cd-email" id="cd-email" required>
+            <input class="email error" type="email" name="cd-email" id="cd-email">
+            <p id="emailFai" style="color: #ff0000;padding-top: 1rem;font-family: Arial;display: none">Veuillez saisir une adresse e-mail valide</p>
         </div>
 
         <div class="icon">
             <label class="cd-label" for="cd-passport">Numéro de passeport</label>
-            <input class="passport" type="text" name="cd-passport" id="cd-passport" required>
+            <input class="passport" type="text" name="cd-passport" id="cd-passport">
+            <p id="passportFai" style="color: #ff0000;padding-top: 1rem;font-family: Arial;display: none">Veuillez saisir votre numéro de passeport</p>
         </div>
     </fieldset>
 
@@ -70,10 +79,14 @@
             <h4>Date de départ</h4>
             <p class="cd-select icon">
                 <select class="budget" id="budget1">
-                    <option value="2017-10-28">2017-10-28</option>
-                    <option value="2017-11-08">2017-11-08</option>
-                    <option value="2017-11-28">2017-11-28</option>
-                    <option value="2017-12-08">2017-12-08</option>
+                    <option value="2017-10-18">18-10-2017</option>
+                    <option value="2017-11-01">01-11-2017</option>
+                    <option value="2017-11-15">15-11-2017</option>
+                    <option value="2017-11-29">29-11-2017</option>
+                    <option value="2018-03-01">01-03-2018</option>
+                    <option value="2018-04-01">01-04-2018</option>
+                    <option value="2018-05-01">01-05-2018</option>
+                    <option value="2018-06-01">01-06-2018</option>
                 </select>
             </p>
         </div>
@@ -83,11 +96,15 @@
             <ul class="cd-form-list">
                 <li>
                     <input type="radio" name="radio-button" id="cd-radio-1" checked>
-                    <label for="cd-radio-1" style="font-family: Arial">2 lits simples</label>
+                    <label for="cd-radio-1" style="font-family: Arial;font-size: 12px">2 lits simples</label>
                 </li>
                 <li>
                     <input type="radio" name="radio-button" id="cd-radio-2">
-                    <label for="cd-radio-2" style="font-family: Arial">1 grand lit doubled</label>
+                    <label for="cd-radio-2" style="font-family: Arial;font-size: 12px">1 grand lit doubled</label>
+                </li>
+                <li>
+                    <input type="radio" name="radio-button" id="cd-radio-3">
+                    <label for="cd-radio-3" style="font-family: Arial;font-size: 12px">Pour une chambre individuelle +400€ à la arrive</label>
                 </li>
             </ul>
         </div>
@@ -123,33 +140,30 @@
         <!--</div>-->
 
         <br>
-            <input type="button" name="btn" id="btn" value="Enregistrer" onclick="demoQuery2()"/>
             <div style="font-family: Arial; font-size: 14px; text-align: center" >Veuillez bien enregistré votre information avant la paiement</div>
+            <input type="button" name="btn" id="btn" value="Enregistrer" onclick="demoQuery2()"/>
+            <p id="saveinfosuc" style="color: #3ce000;padding-top: 1rem;font-family: Arial;display: none;text-align: center">Votre commande a été validée,  veuillez passer au paiement</p>
+            <p id="saveinfofai" style="color: #ff0000;padding-top: 1rem;font-family: Arial;display: none;text-align: center">Veuillez réessayer plus tard</p>
         </br>
 
     </fieldset>
 </form>
-<form class="paypal" id="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
-    <input type="hidden" name="cmd" value="_s-xclick">
-    <input type="hidden" name="hosted_button_id" value="XN65M4S3NS5FL">
-    <!--<input type="image"  src="https://www.sandbox.paypal.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">-->
-    <input type="image"  src="../../img/images/btn_buynowCC_LG.jpg" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">
-<img alt="" border="0" src="https://www.sandbox.paypal.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
-</form>
-<!--<form class="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">-->
+<!--<form target="paypal" class="paypal" id="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">-->
+    <!--<input type="hidden" name="lc" value="FR">-->
     <!--<input type="hidden" name="cmd" value="_s-xclick">-->
-    <!--<input type="hidden" name="hosted_button_id" value="J2V78NK99E7NY">-->
-    <!--<table>-->
-        <!--<tr><td><input type="hidden" name="on0" value="参团人数">参团人数</td></tr><tr><td><select name="os0">-->
-        <!--<option value="1人">1人 € 10.00 EUR</option>-->
-        <!--<option value="2人">2人 € 20.00 EUR</option>-->
-        <!--<option value="3人">3人 € 30.00 EUR</option>-->
-    <!--</select> </td></tr>-->
-    <!--</table>-->
-    <!--<input type="hidden" name="currency_code" value="EUR">-->
-    <!--<input type="image" src="https://www.sandbox.paypal.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">-->
-    <!--<img alt="" border="0" src="https://www.sandbox.paypal.com/zh_XC/i/scr/pixel.gif" width="1" height="1">-->
+    <!--<input type="hidden" name="hosted_button_id" value="AKTLQGU267RDG">-->
+    <!--<input type="image"  src="../../img/images/paybutton.jpg" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">-->
+    <!--&lt;!&ndash;<input type="image" src="https://www.paypalobjects.com/zh_XC/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">&ndash;&gt;-->
+    <!--<img alt="" border="0" src="https://www.paypalobjects.com/zh_XC/i/scr/pixel.gif" width="1" height="1">-->
 <!--</form>-->
+<form target="paypal" class="paypal" id="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+    <input type="hidden" name="lc" value="FR">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="hosted_button_id" value="LCZKPGKA5JTEW">
+    <input type="image" src="../../img/images/paybutton.jpg" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+
 <script src="../../js/config.js"></script>
 <script>
 //    var roomType = "";
@@ -192,6 +206,10 @@
         $("input[name='cd-passport']").val($.cookie("passport"));
         if($.cookie("roomType")=="2"){
             $("#cd-radio-2").attr("checked","checked");
+        }else if($.cookie("roomType")=="1"){
+            $("#cd-radio-1").attr("checked","checked");
+        }else if($.cookie("roomType")=="3"){
+            $("#cd-radio-3").attr("checked","checked");
         }else{
             $("#cd-radio-1").attr("checked","checked");
         }
@@ -213,6 +231,7 @@
                 checkVal(singleInput);
                 singleInput.on('change keyup', function(){
                     checkVal(singleInput);
+                    $(this).parent().find("p").css("display","none");
                 });
             });
         }
@@ -234,9 +253,35 @@
         if ($("input[id='cd-radio-2']:checked").val() == "on") {
             roomType = "2";
         }
+        if ($("input[id='cd-radio-3']:checked").val() == "on") {
+            roomType = "3";
+        }
     }
 
     function demoQuery2(){
+        document.getElementById('saveinfofai').style.display='none';
+        document.getElementById('saveinfosuc').style.display='none';
+        var myreg = /^([a-zA-Z0-9]+[_|\_|\.]?)*[a-zA-Z0-9]+@([a-zA-Z0-9]+[_|\_|\.]?)*[a-zA-Z0-9]+\.[a-zA-Z]{2,3}$/;
+        if($("input[name='cd-name']").val() ==null || $("input[name='cd-name']").val() =="" || $("input[name='cd-name']").val() == undefined){
+            document.getElementById('nameFai').style.display='block';
+//            alert("Merci de renseigner votre nom et prénom");
+            return;
+        }
+        if($("input[name='cd-phone']").val() ==null || $("input[name='cd-phone']").val() =="" || $("input[name='cd-phone']").val() == undefined){
+            document.getElementById('phoneFai').style.display='block';
+//            alert("Merci de renseigner votre numéro de téléphone");
+            return;
+        }
+        if($("input[name='cd-email']").val() ==null || $("input[name='cd-email']").val() =="" || $("input[name='cd-email']").val() == undefined || !myreg.test($("input[name='cd-email']").val())){
+            document.getElementById('emailFai').style.display='block';
+//            alert("Veuillez saisir une adresse e-mail valide");
+            return;
+        }
+        if($("input[name='cd-passport']").val() ==null || $("input[name='cd-passport']").val() =="" || $("input[name='cd-passport']").val() == undefined){
+            document.getElementById('passportFai').style.display='block';
+//            alert("Veuillez saisir votre numéro de passeport");
+            return;
+        }
         awardRoomType();
         $.ajax({
             type:'post',
@@ -254,9 +299,13 @@
                 if(data.msg == "succ"){
                     if(typeof($.cookie("name"))!="undefined"){
                         document.getElementById('paypal').style.display='block';
-                        alert("保存信息成功");
+                        document.getElementById('saveinfosuc').style.display='block';
+//                        alert("Finaliser ma commande et procéder au paiement");
+                        var offsetH = 200;
+                        $("body").animate({"scrollTop":offsetH},800);
                     }else{
-                        alert("保存信息失败");
+                        document.getElementById('saveinfofai').style.display='block';
+//                        alert("Veuillez réessayer plus tard");
                         return;
                     }
                     $("input[name='cd-name']").val($.cookie("name"));
@@ -271,11 +320,14 @@
                     $("input[name='cd-passport']").val($.cookie("passport"));
                     if($.cookie("roomType")=="2"){
                         $("#cd-radio-2").attr("checked","checked");
-                    }else{
+                    }else if($.cookie("roomType")=="1"){
                         $("#cd-radio-1").attr("checked","checked");
+                    }else{
+                        $("#cd-radio-3").attr("checked","checked");
                     }
                 }else{
-                    alert("保存信息失败");
+                    document.getElementById('saveinfofai').style.display='block';
+//                    alert("Veuillez réessayer plus tard");
                 }
             }});
     }
